--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "wed",
+  "sideEffects": false,
   "version": "1.0.0",
   "description": "",
   "private": true,
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack --watch",
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +23,7 @@
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.4",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
