--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --open --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "start": "webpack-dev-server --open --config webpack.config.dev.js",
+    "build": "webpack --config webpack.config.dev.js"
   },
   "keywords": [],
   "author": "",
